--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+LinuxPerf = "b4c46c6c-4fb0-484d-a11a-41bc3392d094"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [extras]
