--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,9 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 LinuxPerf = "b4c46c6c-4fb0-484d-a11a-41bc3392d094"
+PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
